add services.search
